Modified components: -Added language to TextAnimation component for updating de DOM on language change -Completed StickyEffect Component and its animations and child animations -Fixed ParallaxText for getting an optional wrapper and optional progress translateX -Created Menu component with Horizontal scroll section, menu modal appear pending -Modified Container component strucuture

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -102,11 +102,11 @@ div.textAnimation .wrapperForTextAnimation > span {
         }
     }
 }
-
+/* 
 .heroImgContainer {
     clip-path: inset(0% 0% 100% 0%);
     will-change: 'clip-path';
-}
+} */
 
 /* .siteFadeIn {
     animation: siteFadeIn 1s cubic-bezier(0.076, 0, 0.24, 1) forwards;
@@ -128,4 +128,20 @@ div.textAnimation .wrapperForTextAnimation > span {
 
 .heroParallaxText .parallaxTextItemContainerAlt {
     transform: translateX(150%);
+}
+
+.menuContainer {
+    transition: max-width 0.75s cubic-bezier(0.076, 0, 0.24, 1),
+        padding 0.75s cubic-bezier(0.076, 0, 0.24, 1);
+
+    will-change: max-width, padding, transform;
+    transform-origin: center center;
+
+    & > img {
+        transition: height 0.75s cubic-bezier(0.076, 0, 0.24, 1),
+            min-width 0.75s cubic-bezier(0.076, 0, 0.24, 1),
+            opacity 0.5s cubic-bezier(0.076, 0, 0.24, 1);
+        will-change: min-width, height, transform;
+        transform-origin: center center;
+    }
 }
